--- a/week3day4_lab_predictions-logistic-regression.ipynb
+++ b/week3day4_lab_predictions-logistic-regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "48e9ef36",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "0fc56f73",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "69537e02",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "a1d13a6f",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "bd082cd1",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "a2b60115",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "4d983857",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "(900, 31)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "63dc4c22",
    "metadata": {
     "scrolled": false
@@ -561,7 +561,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "fab1fa4a",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "(958, 31)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "862ac5c8",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "c8f54670",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 12,
    "id": "cbe03d82",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 13,
    "id": "01a30177",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 14,
    "id": "d78e7f07",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 15,
    "id": "5fb02cea",
    "metadata": {
     "scrolled": true
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 16,
    "id": "fa558690",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1230,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 17,
    "id": "9e7f1c34",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1251,7 @@
        "(906, 3)"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 18,
    "id": "155ba6fd",
    "metadata": {},
    "outputs": [],
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 19,
    "id": "9b52bc88",
    "metadata": {},
    "outputs": [],
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 20,
    "id": "69e84ac2",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
        "4      6.0          49          21    yes"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 21,
    "id": "4136277c",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1390,7 @@
        "Name: yes_no, dtype: int64"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 22,
    "id": "c301d829",
    "metadata": {
     "scrolled": true
@@ -1510,7 +1510,7 @@
        "[897 rows x 2 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 23,
    "id": "c5d6cc96",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1535,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 24,
    "id": "d15a99a4",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 25,
    "id": "d94b47a4",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1729,7 @@
        "4                    Deleted Scenes        5            8      51.0      5.0  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 26,
    "id": "59fe431d",
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 27,
    "id": "e62397be",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1905,7 @@
        "4            8      51.0  "
       ]
      },
-     "execution_count": 237,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 28,
    "id": "b74b0d92",
    "metadata": {},
    "outputs": [],
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 29,
    "id": "d3e729eb",
    "metadata": {},
    "outputs": [
@@ -1935,8 +1935,8 @@
       "text/plain": [
        "title                object\n",
        "description          object\n",
-       "release_year         object\n",
-       "language_id          object\n",
+       "release_year          int64\n",
+       "language_id           int64\n",
        "rental_duration       int64\n",
        "rental_rate         float64\n",
        "length                int64\n",
@@ -1944,12 +1944,12 @@
        "rating               object\n",
        "special_features     object\n",
        "film_id             float64\n",
-       "category_id          object\n",
+       "category_id           int64\n",
        "actor_id            float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 30,
    "id": "e7904e76",
    "metadata": {},
    "outputs": [],
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 31,
    "id": "4cee0317",
    "metadata": {},
    "outputs": [
@@ -2001,7 +2001,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 32,
    "id": "4ac9ab38",
    "metadata": {},
    "outputs": [],
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 33,
    "id": "bf881cd5",
    "metadata": {},
    "outputs": [
@@ -2032,7 +2032,7 @@
        "(897, 16)"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 34,
    "id": "0f69a05b",
    "metadata": {},
    "outputs": [
@@ -2069,7 +2069,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 35,
    "id": "cc87b8c4",
    "metadata": {},
    "outputs": [],
@@ -2090,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 36,
    "id": "ccc21c90",
    "metadata": {},
    "outputs": [
@@ -2116,7 +2116,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 37,
    "id": "58076619",
    "metadata": {},
    "outputs": [],
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 38,
    "id": "1d7258c7",
    "metadata": {
     "scrolled": true
@@ -2160,7 +2160,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 39,
    "id": "1f4b0d7e",
    "metadata": {},
    "outputs": [],
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 40,
    "id": "cd7b218b",
    "metadata": {},
    "outputs": [],
@@ -2207,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 41,
    "id": "ec3588ac",
    "metadata": {},
    "outputs": [],
@@ -2226,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 42,
    "id": "16ecebca",
    "metadata": {},
    "outputs": [],
@@ -2244,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 43,
    "id": "0232c38c",
    "metadata": {},
    "outputs": [],
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 44,
    "id": "833cae9c",
    "metadata": {},
    "outputs": [],
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 45,
    "id": "ab718d3b",
    "metadata": {
     "scrolled": true
@@ -2524,7 +2524,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2566,7 +2566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 46,
    "id": "aed70d87",
    "metadata": {},
    "outputs": [
@@ -2814,7 +2814,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2848,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 47,
    "id": "598e557e",
    "metadata": {},
    "outputs": [],
@@ -2862,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 48,
    "id": "5c6ee3a3",
    "metadata": {},
    "outputs": [],
@@ -2896,7 +2896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 49,
    "id": "c6d0f817",
    "metadata": {},
    "outputs": [],
@@ -2910,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 50,
    "id": "fb121f33",
    "metadata": {},
    "outputs": [],
@@ -2920,7 +2920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 51,
    "id": "a8964ab5",
    "metadata": {},
    "outputs": [],
@@ -2931,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 52,
    "id": "39b5c33e",
    "metadata": {},
    "outputs": [
@@ -2941,7 +2941,7 @@
        "0.99302649930265"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2953,7 +2953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 53,
    "id": "09dc34fd",
    "metadata": {},
    "outputs": [
@@ -2963,7 +2963,7 @@
        "0.9944444444444445"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2983,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 54,
    "id": "2ebd5d35",
    "metadata": {},
    "outputs": [
@@ -3001,7 +3001,7 @@
        "       [  0, 712]], dtype=int64)"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3014,7 +3014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 55,
    "id": "1d64fcd4",
    "metadata": {},
    "outputs": [
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 56,
    "id": "26b8c7fe",
    "metadata": {},
    "outputs": [
@@ -3074,7 +3074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 57,
    "id": "1b38d214",
    "metadata": {},
    "outputs": [
@@ -3097,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 58,
    "id": "91b1feeb",
    "metadata": {},
    "outputs": [
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 59,
    "id": "49f4ef4a",
    "metadata": {},
    "outputs": [
@@ -3136,7 +3136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 60,
    "id": "5cef39d8",
    "metadata": {},
    "outputs": [
@@ -3154,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 61,
    "id": "4fdc9c40",
    "metadata": {},
    "outputs": [
@@ -3192,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 62,
    "id": "6120dc1d",
    "metadata": {},
    "outputs": [
@@ -3233,13 +3233,55 @@
    "id": "d19ceed4",
    "metadata": {},
    "source": [
-    "This is the proof that the model prediction is good as the data it was fed regardless of the \"checks\" always question the results."
+    "This is the proof that the model prediction is good as the data it was fed regardless of the \"checks\" always question the results.cohen Kappa proves the point as shown below. minimum acceptable value= 0.65"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "2482d4c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cohen_kappa_score(y_train, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "500395cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cohen_kappa_score(y_test, y_test_pred)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2482d4c2",
+   "id": "7b1092d3",
    "metadata": {},
    "outputs": [],
    "source": []
